--- a/composer.json
+++ b/composer.json
@@ -12,23 +12,19 @@
 		"issues": "https://github.com/tacoberu/nette-mailer/issues"
 	},
 	"require": {
-		"php": ">=5.5",
-		"nette/mail": "2.3.*"
+		"php": ">=5.3",
+		"nette/mail": "2.3.*",
+		"nette/utils": "^2.3"
 	},
 	"require-dev": {
 		"tracy/tracy": "^2.3",
-		"nette/utils": "^2.3",
 		"phpunit/phpunit": "^4",
 		"mikey179/vfsStream": "^1.6",
-		"tacoberu/phpcs-coding-standard": "@dev",
 		"sstalle/php7cc": "^1.1",
 		"phpmd/phpmd": "^2.5",
 		"latte/latte": "^2.4",
 		"nette/application": "^2.4"
 	},
-	"repositories": [
-		{	"type": "vcs", "url": "git://github.com/tacoberu/phpcs-coding-standard" }
-	],
 	"autoload": {
 		"psr-4": {"Taco\\Nette\\Mailing\\": "libs/"},
 		"classmap": ["libs/interfaces.php"]
