--- a/composer.json
+++ b/composer.json
@@ -12,22 +12,21 @@
 		"issues": "https://github.com/tacoberu/nette-mailer/issues"
 	},
 	"require": {
-		"php": ">=5.5",
-		"nette/mail": "2.3.*",
-		"nette/utils": "^2.3"
+		"php": ">=5.5"
 	},
 	"require-dev": {
-		"tracy/tracy": "^2.3",
 		"phpunit/phpunit": "^4",
 		"mikey179/vfsStream": "^1.6",
 		"tacoberu/phpcs-coding-standard": "@dev",
 		"sstalle/php7cc": "^1.1",
 		"phpmd/phpmd": "^2.5",
-		"latte/latte": "^2.4",
-		"nette/application": "^2.4"
+		"nette/nette": "^v0.9",
+		"nette/utils": "^v0.9"
 	},
 	"repositories": [
-		{	"type": "vcs", "url": "git://github.com/tacoberu/phpcs-coding-standard" }
+		{	"type": "vcs", "url": "git://github.com/tacoberu/phpcs-coding-standard" },
+		{	"type": "vcs", "url": "git://github.com/tacoberu/nette" },
+		{	"type": "vcs", "url": "git://github.com/tacoberu/utils" }
 	],
 	"autoload": {
 		"psr-4": {"Taco\\Nette\\Mailing\\": "libs/"},
