--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 	},
 	"require": {
 		"php": ">=5.5",
-		"nette/mail": "2.3.*",
-		"nette/utils": "^2.3"
+		"nette/mail": "^2.4",
+		"nette/utils": "^2.4"
 	},
 	"require-dev": {
 		"tracy/tracy": "^2.3",
