--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,13 @@
 		"issues": "https://github.com/tacoberu/nette-mailer/issues"
 	},
 	"require": {
-		"php": ">=5.3",
-		"nette/mail": "^2.4",
-		"nette/utils": "^2.4"
+		"php": ">=7.2 <8.4",
+		"nette/mail": "^2.4 || ^3.0",
+		"nette/utils": "^2.4 || ^3.0"
 	},
 	"require-dev": {
 		"tracy/tracy": "^2.3",
 		"phpunit/phpunit": "^4",
-		"mikey179/vfsStream": "^1.6",
-		"sstalle/php7cc": "^1.1",
 		"phpmd/phpmd": "^2.5",
 		"latte/latte": "^2.4",
 		"nette/application": "^2.4"
