--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,12 @@
 	},
 	"require": {
 		"php": ">=5.3",
-		"nette/mail": "2.3.*",
+		"nette/mail": "^2.3",
 		"nette/utils": "^2.3"
 	},
 	"require-dev": {
 		"tracy/tracy": "^2.3",
 		"phpunit/phpunit": "^4",
-		"mikey179/vfsStream": "^1.6",
-		"sstalle/php7cc": "^1.1",
-		"phpmd/phpmd": "^2.5",
 		"latte/latte": "^2.4",
 		"nette/application": "^2.4"
 	},
